fix: update style on mobile

--- a/css/output.css
+++ b/css/output.css
@@ -663,12 +663,12 @@ video {
   inset: 0px;
 }
 
-.end-1 {
-  inset-inline-end: 0.25rem;
-}
-
 .bottom-0 {
   bottom: 0px;
+}
+
+.end-1 {
+  inset-inline-end: 0.25rem;
 }
 
 .isolate {
@@ -951,6 +951,10 @@ video {
   max-width: 24rem;
 }
 
+.max-w-full {
+  max-width: 100%;
+}
+
 .flex-shrink {
   flex-shrink: 1;
 }
@@ -989,6 +993,11 @@ video {
 
 .border-separate {
   border-collapse: separate;
+}
+
+.translate-y-0 {
+  --tw-translate-y: 0px;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .\!transform {
@@ -2022,11 +2031,11 @@ video {
 }
 
 .bg-sidebar-destop {
-  background-image: url('/assets/images/bg-sidebar-desktop.jpg');
+  background-image: url('https://raw.githubusercontent.com/dejuliansr/front-end-mentor-multi-step-form/1af2005db63d35644414b5af9d7e6c0fc089fcae/assets/images/bg-sidebar-desktop.svg');
 }
 
 .bg-sidebar-mobile {
-  background-image: url('/assets/images/bg-sidebar-mobile.jpg');
+  background-image: url('https://github.com/dejuliansr/front-end-mentor-multi-step-form/blob/master/assets/images/bg-sidebar-mobile.jpg?raw=');
 }
 
 .decoration-slice {
@@ -2157,6 +2166,10 @@ video {
 
 .p-8 {
   padding: 2rem;
+}
+
+.p-5 {
+  padding: 1.25rem;
 }
 
 .px-1 {
@@ -2425,6 +2438,11 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.text-green-500 {
+  --tw-text-opacity: 1;
+  color: rgb(34 197 94 / var(--tw-text-opacity));
+}
+
 .underline {
   text-decoration-line: underline;
 }
@@ -2469,6 +2487,14 @@ video {
 .subpixel-antialiased {
   -webkit-font-smoothing: auto;
   -moz-osx-font-smoothing: auto;
+}
+
+.opacity-0 {
+  opacity: 0;
+}
+
+.opacity-100 {
+  opacity: 1;
 }
 
 .bg-blend-normal {
@@ -2922,10 +2948,6 @@ video {
     align-items: center;
   }
 
-  .max-md\:p-4 {
-    padding: 1rem;
-  }
-
   .max-md\:text-sm {
     font-size: 0.875rem;
     line-height: 1.25rem;
@@ -2968,6 +2990,10 @@ video {
     width: 33.333333%;
   }
 
+  .md\:flex-row {
+    flex-direction: row;
+  }
+
   .md\:flex-col {
     flex-direction: column;
   }
@@ -2980,10 +3006,6 @@ video {
     --tw-space-x-reverse: 0;
     margin-right: calc(1rem * var(--tw-space-x-reverse));
     margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
-  }
-
-  .md\:p-4 {
-    padding: 1rem;
   }
 
   .md\:py-36 {
